// sync messages definitions
// /!\ ALL messages must have a "messageId" property
package sync;

syntax="proto3";

message Heartbeat {
  uint64 messageId = 1;
  string address = 2;
}

message NodeEvicted {
  uint64 messageId = 1;
  string nodeId = 2;
  string reason = 3;
  string evictor = 4;
}

message NodeShutdown {
  uint64 messageId = 1;
  string nodeId = 2;
}

message NewRealtimeRoom {
  uint64 messageId = 1;
  string index = 2;
  string collection = 3;
  string roomId = 4;

  // serialized JSON
  string filters = 5;
}

message RemoveRealtimeRoom {
  uint64 messageId = 1;
  string roomId = 2;
}

message Subscription {
  uint64 messageId = 1;
  string roomId = 2;
}

message Unsubscription {
  uint64 messageId = 1;
  string roomId = 2;
}

message DocumentNotification {
  uint64 messageId = 1;
  repeated string rooms = 2;

  // serialized notification, obtained with DocumentNotification.serialize()
  string notification = 3;
}

message UserNotification {
  uint64 messageId = 1;
  string room = 2;

  // serialized notification, obtained with UserNotification.serialize()
  string notification = 3;
}
